refactor the code and add option for edit a channel

--- a/templates/channels/pushinho_configuration.haml
+++ b/templates/channels/pushinho_configuration.haml
@@ -53,7 +53,7 @@
                     %li mainIconColor: '{{ object.config.main_icon_color }}',
                     %li chatIcon: '{{ object.config.chat_icon_url }}',
                     %li chatIconColor: '{{ object.config.chat_icon_color }}',
-                    %li chatPushMessageColor: '{{ object.config.chat_push_message_color }}'',
+                    %li chatPushMessageColor: '{{ object.config.chat_push_message_color }}',
                     %li chatPushTextColor: '{{ object.config.chat_push_text_color }}',
                     %li chatUserTextColor: '{{ object.config.chat_user_text_color }}',
                 %li },
