--- a/templates/channels/pushinho_configuration.haml
+++ b/templates/channels/pushinho_configuration.haml
@@ -32,8 +32,8 @@
           %li&lt;meta charset="utf-8"&gt; <br/>
           %li&lt;title&gt;{{ object.org.name }}&lt;/title&gt;<br/>
           %li&lt;meta name="viewport" content="width=device-width, initial-scale=1"&gt;<br/>
-          %li&lt;link rel=&quot;stylesheet&quot; href=&quot;https://s3.amazonaws.com/udo-rapidpro-static-app/push-widget/1.1.3/push.min.css&quot;&gt;
-          %li&lt;script src=&quot;https://s3.amazonaws.com/udo-rapidpro-static-app/push-widget/1.1.3/push.min.js&quot;&gt;&lt;/script&gt;
+          %li&lt;link rel=&quot;stylesheet&quot; href=&quot;https://new-push-public-attachments.s3-eu-west-1.amazonaws.com/push-widget/2.0/push.min.css&quot;&gt;
+          %li&lt;script src=&quot;https://new-push-public-attachments.s3-eu-west-1.amazonaws.com/push-widget/2.0/push.min.js&quot;&gt;&lt;/script&gt;
         &lt;/head&gt;<br/>
 
         &lt;body&gt; <br/>
@@ -42,10 +42,11 @@
           %ul
             %li const app = new WebPush({
               %ul
+                %li socketUrl: '{{ object.config.send_url }}',
                 %li channelUUID: '{{ object.uuid }}',
                 %li hostApi: 'https://{{ domain }}',
-                %li welcomeButton: '{{ object.config.welcome_button }}',
                 %li welcomeMessage: '{{ object.config.welcome_message }}',
+                %li welcomeButton: '{{ object.config.welcome_button }}',
                 %li autoOpen: {{ object.config.auto_open }},
                 %li <br/>// Use this code below to customize your widget
                 %li customizeWidget: {
